[gd_scene load_steps=6 format=3 uid="uid://br02qq5jqcbmy"]

[ext_resource type="Script" path="res://scene/scene/ui/health_bar.gd" id="1_m40in"]
[ext_resource type="Texture2D" uid="uid://c71uyd4ywi1xq" path="res://art/ui/bar/bar_red_frame.png" id="2_d4yxm"]
[ext_resource type="Texture2D" uid="uid://csbnabwambcp0" path="res://art/ui/bar/bar_red.png" id="3_1up8q"]
[ext_resource type="FontFile" uid="uid://jyeokg8ohqjm" path="res://art/font/sofachrome_rg.otf" id="4_8rksw"]
[ext_resource type="Texture2D" uid="uid://cmhgkh6ronwnt" path="res://art/ui/bar/icon_shield.png" id="5_jmg6p"]

[node name="HealthBar" type="Node2D"]
script = ExtResource("1_m40in")

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
offset_right = 272.0
offset_bottom = 21.0
value = 100.0
allow_greater = true
stretch_margin_left = 10
stretch_margin_top = 10
stretch_margin_right = 10
stretch_margin_bottom = 10
texture_under = ExtResource("2_d4yxm")
texture_progress = ExtResource("3_1up8q")
texture_progress_offset = Vector2(3, 2)

[node name="Label" type="Label" parent="TextureProgressBar"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -78.5
offset_top = -34.0
offset_right = 78.5
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.190762, 0.190762, 0.190762, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("4_8rksw")
theme_override_font_sizes/font_size = 22
text = "999/999"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D_Shield" type="Sprite2D" parent="."]
position = Vector2(-16, 8)
scale = Vector2(0.2, 0.2)
texture = ExtResource("5_jmg6p")

[node name="Label_Shield" type="Label" parent="Sprite2D_Shield"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -258.0
offset_top = -176.0
offset_right = 3.0
offset_bottom = -79.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.0855, 0.261675, 0.45, 1)
theme_override_colors/font_outline_color = Color(7.70092e-06, 0.659865, 0.854009, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 14
theme_override_fonts/font = ExtResource("4_8rksw")
theme_override_font_sizes/font_size = 100
text = "999"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Node2D_StatusIcons" type="Node2D" parent="."]
position = Vector2(10, 35)
